--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.86.0",
+    "@types/papaparse": "^5.5.1",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
